# rust-gouda-meetup-1

./: README.md
debugger_firmware/: .gdbinit  Readme.md  blackmagic  blackmagic_dfu
examples/blinky/: Cargo.toml
examples/blinky/src/: main.rs
examples/blinky_bsp/: Cargo.toml
examples/blinky_output/: Cargo.toml
examples/blinky_output/src/: main.rs
examples/blinky_unsafe/src/: main.rs
examples/cortex-m-interrupts/: Cargo.toml
examples/cortex-m-interrupts/.cargo/: config
examples/cortex-m-interrupts/src/: main.rs
examples/cortex-m-quickstart/: Cargo.toml  memory.x
examples/cortex-m-quickstart/src/: main.rs
setting_up/: add_to_dialout.sh  fix_permissions.sh  install_ubuntu_packages.sh  setup.sh
